updated the project details images.

--- a/src/index.css
+++ b/src/index.css
@@ -210,6 +210,7 @@
   background-color: rgb(3, 35, 104);
   margin-right: 5px;
   margin-left: 5px;
+  margin-bottom: 8px;
 }
 
 .footer-container {
